--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,7 +49,7 @@
      <Compile Include="Assets\Scripts\Base.cs" />
      <Compile Include="Assets\Scripts\ClickControl.cs" />
      <Compile Include="Assets\Scripts\GameBoard.cs" />
-     <Compile Include="Assets\Scripts\LanuchPower.cs" />
+     <Compile Include="Assets\Scripts\LaunchPower.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\Ship.cs" />
      <Compile Include="Assets\Scripts\ShipControls.cs" />
